--- a/requirements.txt
+++ b/requirements.txt
@@ -1,13 +1,13 @@
-flask==3.0.2
-gunicorn==21.2.0
-PyPDF2==3.0.1
-python-docx==1.1.0
-textstat==0.7.3
-scikit-learn==1.4.2
-spacy==3.7.4
-sentence-transformers==2.6.1
-language-tool-python==2.7.1
-pymongo==4.6.2
-python-dotenv==1.0.1
-werkzeug==3.0.1
-pydantic==2.6.4
+flask>=3.0.2
+gunicorn>=21.2.0
+PyPDF2>=3.0.1
+python-docx>=1.1.0
+textstat>=0.7.3
+scikit-learn>=1.4.2
+spacy>=3.7.4
+sentence-transformers>=2.6.1
+language-tool-python>=2.7.1
+pymongo>=4.6.2
+python-dotenv>=1.0.1
+werkzeug>=3.0.1
+pydantic>=2.6.4
